findOne quiz service
